@@ -159,7 +159,8 @@ a.stats_link.missing span	{color:#000;}
 	============================================= */
 .main_title_wrap			{width:960px; margin:0 auto; padding:40px 20px;}
 .title_wrap					{width:960px; margin:0 auto; padding:0px 20px 40px 20px; margin-bottom:40px;}
-.table_wrap					{background-color:#FFF; padding:0 20px 20px 20px; border-radius:0 0 8px 8px; border:1px solid #000; border-top:0;}
+.table_wrap					{background-color:#FFF; padding:0 0 20px 0; border-radius:0 0 8px 8px; border:1px solid #000; border-top:0;}
+.table_wrap.main			{padding-bottom:0;}
 .table_wrap.view			{width:920px; margin:0 auto; padding:20px; margin-bottom:40px; border:1px solid #000;}
 
 
@@ -192,7 +193,7 @@ a.read:hover			{text-decoration:underline;}
 .list_stats_num				{display:block; font-size:2.9em; color:#FFF; line-height:0.8em;}
 a.button					{padding:10px 20px; background-color:#FFF; font-size:1.25em; color:#000; border-radius:0 0 8px 8px; display:block; max-width:320px; margin:0 auto; text-align:center; border:1px solid #000; border-top:0;}
 a.button:hover				{background-color:#000; color:#FFF;}
-a.csv_download				{display:block; margin-top:20px; padding:10px 20px; background-color:#000; text-align:center; color:#FFF;}
+a.csv_download				{display:block; margin-top:20px; padding:10px 0; background-color:#000; text-align:center; color:#FFF; margin-left:20px; margin-right:20px;}
 a.csv_download:hover		{background-color:#000; color:#FFF;}
 
 
@@ -249,7 +250,7 @@ a#search_link:hover			{background-color:#000; color:#FFF;}
 	============================================= */
 th.titles					{color:#000; text-align:left; padding:10px 0 10px 20px; border-bottom:1px solid #000;}
 th.titles:nth-child(1), th.titles:nth-child(3),
-th.titles:last-child		{padding:10px 0; text-align:right; font-size:0.8em;}
+th.titles:last-child		{padding:10px 20px 10px 0; text-align:right; font-size:0.8em;}
 th.titles:last-child		{min-width:100px;}
 
 
@@ -295,24 +296,26 @@ table.stats td			{background-color:#FFF; padding:0px; vertical-align:top;}
 	============================================= */
 table.list				{width:100%; border-collapse:collapse;}
 table.list td			{color:#000; font-size:1.25em; line-height:1.35em; word-spacing:0.7px; padding:20px 0; vertical-align:top; border-bottom:1px solid #000;}
-table.list tr:last-child td	{border:0;}
+table.list tr:last-child td	{border:0; padding-bottom:20px;}
+table.list tr:hover		{background-color:E9E9E9;}
+table.list td:first-child	{padding-left:20px;}
 table.list td span		{display:block; padding-top:5px; color:#000; font-size:0.7em; line-height:1.0em;}
 table.list td.title		{padding:0;}
-table.list td.date		{text-align:right; padding-right:0; min-width:160px;}
+table.list td.date		{text-align:right; padding-right:20px; min-width:160px;}
 table.list td.alert_no_iati		{text-align:center; font-size:2.0em; padding:20px 0 0 0; cursor:default;}
 table.list td.alert_no_iati a	{padding:10px 0;}
 table.list a			{display:inline-block; padding:20px; width:100%; color:#000;}
 table.list a:focus		{color:#000; text-decoration:none;}
 table.list a:link  		{color:#000; text-decoration:none;}
 table.list a:visited	{color:#000; text-decoration:none;}
-table.list a:hover		{color:#000; text-decoration:none; background-color:#E9E9E9;}
+table.list a:hover		{color:#000; text-decoration:none;}
 table.list a:active		{color:#000; text-decoration:none;}
 
 
 /*	Table for Money list (Donors / Sectors)
 	============================================= */
 table.money					{width:100%; border-collapse:collapse; table-layout:fixed;}
-table.money td				{text-align:right; color:#000; font-size:1.0em; line-height:1.45em; word-spacing:0.7px; padding:0px; vertical-align:top; border-bottom:1px solid #666; padding:15px 10px;}
+table.money td				{text-align:right; color:#000; font-size:1.0em; line-height:1.45em; word-spacing:0.7px; padding:0px; vertical-align:top; border-bottom:1px solid #666; border-right:1px solid #666; padding:15px 10px;}
 table.money td.col1			{text-align:left; background-color:#F1F1F1;}
 table.money td.col2			{text-align:left;}
 table.money td.col3			{background-color:#F1F1F1;}
@@ -370,12 +373,14 @@ table.activity			{width:100%; border-collapse:collapse;}
 table.activity td		{color:#000; font-size:1.25em; line-height:1.0em; word-spacing:0.7px; padding:10px 20px; vertical-align:top; border-bottom:1px solid #333642;}
 table.activity th:hover	{cursor:default;}
 table.activity tr:last-child td	{border:0;}
-table.activity td.num	{padding:10px 0; font-size:1.0em; line-height:1.75em;}
+table.activity tr:hover	{background-color:#E9E9E9;}
+table.activity tr:first-child:hover	{background-color:transparent;}
+table.activity td.num	{padding:10px 0 10px 20px; font-size:1.0em; line-height:1.75em;}
 table.activity td.title	{padding:0 30px 0 0;}
 table.activity td.title.missing	{max-width:600px;}
-table.activity td.value	{text-align:right; padding:10px 0 10px 40px; font-size:1.0em; line-height:1.75em;}
-table.activity td.count	{text-align:right; padding:10px 0 0 40px; font-size:1.7em; line-height:1.0em;}
-table.activity td.date	{text-align:right; padding-right:0; white-space:nowrap; font-size:1.0em; line-height:1.75em;}
+table.activity td.value	{text-align:right; padding:10px 20px 10px 40px; font-size:1.0em; line-height:1.75em;}
+table.activity td.count	{text-align:right; padding:10px 20px 0 40px; font-size:1.7em; line-height:1.0em;}
+table.activity td.date	{text-align:right; white-space:nowrap; font-size:1.0em; line-height:1.75em;}
 table.activity td.alert_no_iati	{text-align:center; font-size:2.0em; padding:20px 0 0 0; cursor:default;}
 table.activity td span	{display:block; padding:2px 0 3px 0; color:#000; font-size:0.7em; line-height:1.25em;}
 table.activity a		{display:inline-block; padding:10px 20px; width:100%; color:#000; line-height:1.0em; box-sizing:border-box;}
@@ -383,7 +388,7 @@ table.activity a.percent{padding:10px 0px 20px 20px;}
 table.activity a:focus	{color:#000; text-decoration:none;}
 table.activity a:link  	{color:#000; text-decoration:none;}
 table.activity a:visited{color:#000; text-decoration:none;}
-table.activity a:hover	{color:#000; text-decoration:none; background-color:#E9E9E9;}
+table.activity a:hover	{color:#000; text-decoration:none;}
 table.activity a:active	{color:#000; text-decoration:none;}
 
 
