@@ -155,7 +155,7 @@
 			<td class="sort">{list_active_declare_text}</td>
 		</tr>
 	</table>
-	<div class="table_wrap">
+	<div class="table_wrap main">
 		<table class="list">
 			{table_active_datas}
 		</table>
@@ -174,7 +174,7 @@
 			<td class="sort">{list_ended_declare_text}</td>
 		</tr>
 	</table>
-	<div class="table_wrap">
+	<div class="table_wrap main">
 		<table class="list">
 			{table_ended_datas}
 		</table>
