@@ -1,3 +1,9 @@
+Development Portal (2016-01-29 shi)
+==============================
+Fixed all tables layout for better hover states
+Added border lines to Print Friendly tables
+
+
 Development Portal (2016-01-28 shi)
 ==============================
 Added new data quality alert for no active projects
